--- a/document.html
+++ b/document.html
@@ -72,8 +72,8 @@
                             <input type="password" class="form-control" id="newPassword" required>
                         </div>
                         <div class="mb-3">
-                            <label for="checkPassword" class="form-label">Confirm Password</label>
-                            <input type="password" class="form-control" id="checkPassword" required>
+                            <label for="confirmPassword" class="form-label">Confirm Password</label>
+                            <input type="password" class="form-control" id="confirmPassword" required>
                         </div>
                     </div>
                     <div class="modal-footer">
