--- a/masters_customer.html
+++ b/masters_customer.html
@@ -291,7 +291,7 @@
                         <div class="col-md-12">
                             <div class="flex-wrap d-flex justify-content-between align-items-center">
                                 <div>
-                                    <h1>Hello Devs!</h1>
+                                    <h1 id="hello_username">Hello Devs!</h1>
                                     <p>We are on a mission to help developers like you build successful projects for
                                         FREE.</p>
                                 </div>
@@ -347,7 +347,7 @@
                             <div class="datatable table-responsive">
                                 <div class="entry_fields row align-items-center m-4">
                                     <h5 class="col-md-3">Customer Genders</h5>
-                                    <div class="d-flex col-md-9">
+                                    <div class="d-flex justify-content-end col-md-9">
                                         <span class="update_fields_CustomerGenders update_fields d-none"></span>
                                         <span class="add_fields add_fields_CustomerGenders d-flex">
                                             <input type="text" dataKey="CustomerGenderValue"
@@ -387,7 +387,7 @@
                             <div class="datatable d-none table-responsive">
                                 <div class="entry_fields d-flex justify-content-between align-items-center m-4">
                                     <h5>Customer Relations</h5>
-                                    <div class="d-flex col-md-9">
+                                    <div class="d-flex justify-content-end col-md-9">
                                         <span class="update_fields_CustomerRelationships update_fields d-none"></span>
                                         <span class="add_fields add_fields_CustomerRelationships d-flex">
                                             <input type="text" dataKey="CustomerRelationshipTitle"
@@ -428,7 +428,7 @@
                             <div class="datatable d-none table-responsive">
                                 <div class="entry_fields d-flex justify-content-between align-items-center m-4">
                                     <h5>Customer Type</h5>
-                                    <div class="d-flex col-md-9">
+                                    <div class="d-flex justify-content-end col-md-9">
                                         <span class="update_fields_CustomerType update_fields d-none"></span>
                                         <span class="add_fields add_fields_CustomerTypes d-flex">
                                             <input type="text" dataKey="CustomerTypeTitle" class="postData form-control"
@@ -462,7 +462,7 @@
                             <div class="datatable d-none table-responsive">
                                 <div class="entry_fields d-flex justify-content-between align-items-center m-4">
                                     <h5>Customer Category</h5>
-                                    <div class="d-flex col-md-9">
+                                    <div class="d-flex justify-content-end col-md-9">
                                         <span class="update_fields_CustomerCategory update_fields d-none"></span>
                                         <span class="add_fields add_fields_CustomerCategory d-flex">
                                             <select type="text" dataKey="CustomerTypeID" class="postData form-select"
