--- a/masters_document.html
+++ b/masters_document.html
@@ -291,7 +291,7 @@
                         <div class="col-md-12">
                             <div class="flex-wrap d-flex justify-content-between align-items-center">
                                 <div>
-                                    <h1>Hello Devs!</h1>
+                                    <h1 id="hello_username">Hello Devs!</h1>
                                     <p>We are on a mission to help developers like you build successful projects for
                                         FREE.</p>
                                 </div>
@@ -343,7 +343,7 @@
                             <div class="datatable table-responsive">
                                 <div class="entry_fields d-flex justify-content-between align-items-center m-4">
                                     <h5 class="col-md-3">Document Languages</h5>
-                                    <div class="d-flex col-md-9">
+                                    <div class="d-flex justify-content-end col-md-9">
                                         <span class="update_fields_DocumentLanguage update_fields d-none"></span>
                                         <span class="add_fields add_fields_DocumentLanguage d-flex">
                                             <input type="text" dataKey="DocumentLanguageTitle"
@@ -377,7 +377,7 @@
                             <div class="datatable d-none table-responsive">
                                 <div class="entry_fields d-flex justify-content-between align-items-center m-4">
                                     <h5 class="col-md-3">Document Types</h5>
-                                    <div class="d-flex col-md-9">
+                                    <div class="d-flex justify-content-end col-md-9">
                                         <span class="update_fields_DocumentType update_fields d-none"></span>
                                         <span class="add_fields add_fields_DocumentType d-flex">
                                             <input type="text" dataKey="DocumentTypeTitle" class="postData form-control"
@@ -409,7 +409,7 @@
                             <div class="datatable d-none table-responsive">
                                 <div class="entry_fields d-flex justify-content-between align-items-center m-4">
                                     <h5 class="col-md-3">Property Types</h5>
-                                    <div class="d-flex col-md-9">
+                                    <div class="d-flex justify-content-end col-md-9">
                                         <span class="update_fields_PropertyType update_fields d-none"></span>
                                         <span class="add_fields add_fields_PropertyType d-flex">
                                             <input type="text" dataKey="PropertyTypeTitle" class="postData form-control"
