--- a/document.html
+++ b/document.html
@@ -621,7 +621,7 @@
                                                         </div>
                                                         <div class="col-md-4 mb-3">
                                                             <div class="form-floating">
-                                                                <input deed_id="documentFirstPersonAge_0" type="text"
+                                                                <input deed_id="documentFirstPersonAge_0" type="number"
                                                                     class="form-control" name="" id="inputVendorAge"
                                                                     placeholder="Enter Age" />
                                                                 <label for="inputVendorAge">Age</label>
@@ -660,7 +660,7 @@
                                                         </div>
                                                         <div class="col-md-4 mb-3">
                                                             <div class="form-floating">
-                                                                <input type="text" deed_id="documentFirstPersonAadhar_0"
+                                                                <input type="number" deed_id="documentFirstPersonAadhar_0"
                                                                     class="form-control" name="" id="inputVendorAadhar"
                                                                     placeholder="Aadhar No" />
                                                                 <label for="inputVendorAadhar">Aadhar No</label>
@@ -668,7 +668,7 @@
                                                         </div>
                                                         <div class="col-md-4 mb-3">
                                                             <div class="form-floating">
-                                                                <input type="text" class="form-control" name=""
+                                                                <input type="number" class="form-control" name=""
                                                                     deed_id="documentFirstPersonPhone_0"
                                                                     id="inputVendorPhone" placeholder="Phone No" />
                                                                 <label for="inputVendorPhone">Phone No</label>
@@ -727,7 +727,7 @@
                                                         </div>
                                                         <div class="col-md-4 mb-3">
                                                             <div class="form-floating">
-                                                                <input type="text" class="form-control" name=""
+                                                                <input type="number" class="form-control" name=""
                                                                     id="inputVendorPincode"
                                                                     deed_id="documentFirstPersonPincode_0"
                                                                     placeholder="Pincode" />
@@ -808,7 +808,7 @@
                                                     </div>
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
-                                                            <input deed_id="documentSecondPersonAge_0" type="text"
+                                                            <input deed_id="documentSecondPersonAge_0" type="number"
                                                                 class="form-control" name="" id="inputPurchaserAge"
                                                                 placeholder="Enter Age" />
                                                             <label for="inputPurchaserAge">Age</label>
@@ -829,9 +829,9 @@
                                                                 id="inputPurchaserRelationship">
                                                                 <option value="#inputPurchaserRelationship">RelationShip
                                                                 </option>
-                                                                <label
-                                                                    for="inputPurchaserRelationship">RelationShip</label>
                                                             </select>
+                                                            <label
+                                                                for="inputPurchaserRelationship">RelationShip</label>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-4 mb-3">
@@ -846,7 +846,7 @@
                                                     </div>
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
-                                                            <input type="text" deed_id="documentSecondPersonAadhar_0"
+                                                            <input type="number" deed_id="documentSecondPersonAadhar_0"
                                                                 class="form-control" name="" id="inputPurchaserAadhar"
                                                                 placeholder="Aadhar No" />
                                                             <label for="inputPurchaserAadhar">Aadhar No</label>
@@ -854,7 +854,7 @@
                                                     </div>
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
-                                                            <input deed_id="documentSecondPersonPhone_0" type="text"
+                                                            <input deed_id="documentSecondPersonPhone_0" type="number"
                                                                 class="form-control" name="" id="inputPurchaserPhone"
                                                                 placeholder="Phone No" />
                                                             <label for="inputPurchaserPhone">Phone No</label>
@@ -912,7 +912,7 @@
                                                     </div>
                                                     <div class="col-md-4 mb-3">
                                                         <div class="form-floating">
-                                                            <input type="text" class="form-control" name=""
+                                                            <input type="number" class="form-control" name=""
                                                                 id="inputPurchaserPincode"
                                                                 deed_id="documentSecondPersonPincode_0"
                                                                 placeholder="Pincode" />
@@ -970,9 +970,9 @@
                                                 </div>
                                                 <div class="col-md-4 mb-3">
                                                     <div class="form-floating">
-                                                        <input deed_id="documentWitnessPersonAge_0" type="text"
+                                                        <input deed_id="documentWitnessPersonAge_0" type="number"
                                                             class="form-control" name="" id="inputWitnessAge"
-                                                            placeholder="Enter Age" />
+                                                            placeholder="Enter Age"  />
                                                         <label for="inputWitnessAge">Age</label>
                                                     </div>
                                                 </div>
@@ -990,8 +990,8 @@
                                                             class="form-select" name="" id="inputWitnessRelationship">
                                                             <option value="#inputWitnessRelationship">RelationShip
                                                             </option>
-                                                            <label for="inputWitnessRelationship">RelationShip</label>
                                                         </select>
+                                                        <label for="inputWitnessRelationship">RelationShip</label>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-4 mb-3">
@@ -1004,7 +1004,7 @@
                                                 </div>
                                                 <div class="col-md-4 mb-3">
                                                     <div class="form-floating">
-                                                        <input type="text" deed_id="documentWitnessPersonAadhar_0"
+                                                        <input type="number" deed_id="documentWitnessPersonAadhar_0"
                                                             class="form-control" name="" id="inputWitnessAadhar"
                                                             placeholder="Aadhar No" />
                                                         <label for="inputWitnessAadhar">Aadhar No</label>
@@ -1012,7 +1012,7 @@
                                                 </div>
                                                 <div class="col-md-4 mb-3">
                                                     <div class="form-floating">
-                                                        <input deed_id="documentWitnessPersonPhone_0" type="text"
+                                                        <input deed_id="documentWitnessPersonPhone_0" type="number"
                                                             deed_id="documentWitnessPersonPhone" class="form-control"
                                                             name="" id="inputWitnessPhone" placeholder="Phone No" />
                                                         <label for="inputWitnessPhone">Phone No</label>
@@ -1070,7 +1070,7 @@
                                                 </div>
                                                 <div class="col-md-4 mb-3">
                                                     <div class="form-floating">
-                                                        <input type="text" class="form-control" name=""
+                                                        <input type="number" class="form-control" name=""
                                                             id="inputWitnessPincode"
                                                             deed_id="documentWitnessPersonPincode_0"
                                                             placeholder="Pincode" />
