--- a/recoverpw.html
+++ b/recoverpw.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>Document generator - Dlanzer</title>
+      <title>DOCUMENT GENERATOR - DLANZER</title>
       
       <!-- Favicon -->
       <link rel="shortcut icon" href="./assets/images/favicon.ico" />
