--- a/document.html
+++ b/document.html
@@ -349,11 +349,11 @@
                 <div class="col-sm-12 col-lg-12">
                     <div class="card">
                         <div style="background-color: rgba(0,0,0,.03)"
-                            class="card-header d-flex justify-content-between align-items-center">
-                            <div class="header-title">
+                            class="card-header row justify-content-between align-items-center">
+                            <div class="header-title col-sm-9">
                                 <h4 class="card-title">Document</h4>
                             </div>
-                            <button class="btn btn-primary new_document_entry_toggle"> New Document </button>
+                            <button class="btn btn-primary new_document_entry_toggle col-sm-3"> New Document </button>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
