--- a/document.html
+++ b/document.html
@@ -353,7 +353,9 @@
                             <div class="header-title col-sm-9">
                                 <h4 class="card-title">Document</h4>
                             </div>
-                            <button class="btn btn-primary new_document_entry_toggle col-sm-3"> New Document </button>
+                            <div class="col-sm-3">
+                                <button class="btn btn-primary new_document_entry_toggle float-end"> New Document </button>
+                            </div>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -426,12 +428,14 @@
                 <div class="row">
                     <div class="col-sm-12 col-lg-6">
                         <div class="card">
-                            <div class="card-header d-flex justify-content-between">
-                                <div class="header-title">
+                            <div class="card-header row justify-content-between">
+                                <div class="header-title col-sm-8">
                                     <h4 class="card-title">Create Document</h4>
                                 </div>
-                                <button type="button" style="width: 208px;"
-                                    class="table_display_toggle btn btn-secondary">View Table</button>
+                                <div class="col-sm-4">                            
+                                    <button type="button"
+                                    class="table_display_toggle btn btn-secondary float-end">View Table</button>
+                                </div>                                
                             </div>
                             <div class="card-body">
                                 <form id="form-wizard1" class="mt-3 text-center">
@@ -559,16 +563,14 @@
                                     <fieldset>
                                         <div class="form-card text-start">
                                             <div class="row">
-                                                <div class="col-7">
+                                                <div class="col-md-7">
                                                     <h3 class="mb-4">Vendor Information:</h3>
                                                 </div>
-                                                <div class="col-5">
-                                                    <button type="button"
-                                                        class="btn btn-dark float-md-end me-1 d-sm-none">Remove</button>
+                                                <div class="col-md-5">
                                                     <button type="button" id="vendorInfoClone"
                                                         class="btn btn-primary float-md-end">Add</button>
                                                     <button type="button" id="vendorInfoRemoveClone"
-                                                        class="btn btn-dark float-md-end me-1 d-none d-md-block">Remove</button>
+                                                        class="btn btn-dark float-md-end me-1">Remove</button>
                                                 </div>
                                             </div>
                                             <div class="row">
@@ -748,16 +750,14 @@
                                     <fieldset>
                                         <div class="form-card text-start">
                                             <div class="row">
-                                                <div class="col-7">
+                                                <div class="col-md-7">
                                                     <h3 class="mb-4">Purchaser Information:</h3>
                                                 </div>
-                                                <div class="col-5">
-                                                    <button type="button"
-                                                        class="btn btn-dark float-md-end me-1 d-sm-none">Remove</button>
+                                                <div class="col-md-5">
                                                     <button type="button" class="btn btn-primary float-md-end"
                                                         id="purchaserInfoClone">Add</button>
                                                     <button type="button" id="purchaserInfoRemoveClone"
-                                                        class="btn btn-dark float-md-end me-1 d-none d-md-block">Remove</button>
+                                                        class="btn btn-dark float-md-end me-1">Remove</button>
                                                 </div>
                                             </div>
                                             <div class="row">
@@ -934,14 +934,14 @@
                                     <fieldset>
                                         <div class="form-card">
                                             <div class="row">
-                                                <div class="col-7">
+                                                <div class="col-md-7">
                                                     <h3 class="mb-4 text-start">Witness Details:</h3>
                                                 </div>
-                                                <div class="col-5">
+                                                <div class="col-md-5">
                                                     <button type="button" class="btn btn-primary float-md-end"
                                                         id="witnessInfoClone">Add</button>
                                                     <button type="button" id="witnessInfoRemoveClone"
-                                                        class="btn btn-dark float-md-end me-1 d-none d-md-block">Remove</button>
+                                                        class="btn btn-dark float-md-end me-1">Remove</button>
                                                 </div>
                                             </div>
                                             <div class="row inputWitnessInfo">
