--- a/document.html
+++ b/document.html
@@ -397,7 +397,7 @@
                         <div class="card-body p-2 h-75 d-flex align-items-center  flex-column">
                             <button style="width: 208px;" class="table_display_toggle btn btn-secondary">View
                                 Table</button>
-                            <button style="width: 208px;" class="mt-2 btn btn-warning">Edit</button>
+                            <button style="width: 208px;" class="mt-2 btn document_edit btn-warning">Edit</button>
                             <div class="dropdown mt-2">
                                 <button style="width: 208px;" class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
                                     data-bs-toggle="dropdown" aria-expanded="false">
