--- a/recoverpw.html
+++ b/recoverpw.html
@@ -76,7 +76,7 @@
                               </div>
                            </div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Reset</button>
+                        <button type="submit" class="btn btn-primary">Send OTP</button>
                      </form>
                      <form autocomplete="off" id="forgot_password_form" class="d-none mt-3">
                         <div class="row">
