--- a/masters_customer.html
+++ b/masters_customer.html
@@ -346,21 +346,21 @@
                         <div class="card-body">
                             <div class="datatable table-responsive">
                                 <div class="entry_fields row align-items-center m-4">
-                                    <h5 class="col-md-3">Customer Genders</h5>
-                                    <div class="d-flex justify-content-end col-md-9">
-                                        <span class="update_fields_CustomerGenders update_fields d-none"></span>
-                                        <span class="add_fields add_fields_CustomerGenders d-flex">
-                                            <input type="text" dataKey="CustomerGenderValue"
-                                                class="postData form-control" name="" id=""
-                                                placeholder="Gender Value" />
-                                            <input dataKey="CustomerGenderTitle" type="text"
-                                                class="postData form-control" name="" id=""
-                                                placeholder="Gender Title" />
+                                    <h5 class="col-md-4">Customer Genders</h5>
+                                    <div class="justify-content-center align-items-center row col-md">
+                                        <span class="update_fields_CustomerGenders update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields add_fields_CustomerGenders col-md row p-0 p-md-3 justify-content-start align-items-center">
+                                                <input type="text" dataKey="CustomerGenderValue"
+                                                    class="postData form-control col-sm" name="" id=""
+                                                    placeholder="Gender Value" />
+                                                <input dataKey="CustomerGenderTitle" type="text"
+                                                    class="postData form-control col-sm"  name="" id=""
+                                                    placeholder="Gender Title" />
                                             <button postAPI="CustomerGenders"
-                                                class="addData btn btn-primary ms-2">ADD</button>
+                                                class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
-                                        <span value="CustomerGenders"
-                                            class="new_data_fields btn btn-secondary ms-2">Clear</span>
+                                        <button value="CustomerGenders"
+                                            class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
                                     </div>
                                 </div>
                                 <table id="CustomerGenderTable" class="table table-striped" data-toggle="data-table">
@@ -385,22 +385,22 @@
                                 </table>
                             </div>
                             <div class="datatable d-none table-responsive">
-                                <div class="entry_fields d-flex justify-content-between align-items-center m-4">
-                                    <h5>Customer Relations</h5>
-                                    <div class="d-flex justify-content-end col-md-9">
-                                        <span class="update_fields_CustomerRelationships update_fields d-none"></span>
-                                        <span class="add_fields add_fields_CustomerRelationships d-flex">
+                                <div class="entry_fields row justify-content-between align-items-center m-4">
+                                    <h5 class="col-md-4">Customer Relations</h5>
+                                    <div class="justify-content-center align-items-center row col-md">
+                                        <span class="update_fields_CustomerRelationships update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields add_fields_CustomerRelationships col-md row p-0 p-md-3 justify-content-start align-items-center">
                                             <input type="text" dataKey="CustomerRelationshipTitle"
-                                                class="postData form-control" name="" id=""
+                                                class="postData form-control col-sm" name="" id=""
                                                 placeholder="Relationship Title" />
                                             <input dataKey="CustomerRelationshipValue" type="text"
-                                                class="postData form-control" name="" id=""
+                                                class="postData form-control col-sm" name="" id=""
                                                 placeholder="Relationship Value" />
                                             <button postAPI="CustomerRelationships"
-                                                class="addData btn btn-primary ms-2">ADD</button>
+                                                class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
                                         <button value="CustomerRelationships"
-                                            class="new_data_fields btn btn-secondary ms-2">Clear</button>
+                                            class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
                                     </div>
                                 </div>
                                 <table id="CustomerRelationshipsTable" class="table table-striped"
@@ -426,18 +426,18 @@
                                 </table>
                             </div>
                             <div class="datatable d-none table-responsive">
-                                <div class="entry_fields d-flex justify-content-between align-items-center m-4">
-                                    <h5>Customer Type</h5>
-                                    <div class="d-flex justify-content-end col-md-9">
-                                        <span class="update_fields_CustomerType update_fields d-none"></span>
-                                        <span class="add_fields add_fields_CustomerTypes d-flex">
-                                            <input type="text" dataKey="CustomerTypeTitle" class="postData form-control"
+                                <div class="entry_fields row justify-content-between align-items-center m-4">
+                                    <h5 class="col-md-4">Customer Type</h5>
+                                    <div class="justify-content-center align-items-center row col-md">
+                                        <span class="update_fields_CustomerType update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields add_fields_CustomerTypes col-md row p-0 p-md-3 justify-content-start align-items-center">
+                                            <input type="text" dataKey="CustomerTypeTitle" class="postData form-control col-sm"
                                                 name="" id="" placeholder="Customer Type Title" />
                                             <button postAPI="CustomerTypes"
-                                                class="addData btn btn-primary ms-2">ADD</button>
+                                                class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
                                         <button value="CustomerType"
-                                            class="new_data_fields btn btn-secondary ms-2">Clear</button>
+                                            class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
                                     </div>
                                 </div>
                                 <table id="CustomerTypeTable" class="table table-striped" data-toggle="data-table">
@@ -460,23 +460,23 @@
                                 </table>
                             </div>
                             <div class="datatable d-none table-responsive">
-                                <div class="entry_fields d-flex justify-content-between align-items-center m-4">
-                                    <h5>Customer Category</h5>
-                                    <div class="d-flex justify-content-end col-md-9">
-                                        <span class="update_fields_CustomerCategory update_fields d-none"></span>
-                                        <span class="add_fields add_fields_CustomerCategory d-flex">
-                                            <select type="text" dataKey="CustomerTypeID" class="postData form-select"
+                                <div class="entry_fields row justify-content-between align-items-center m-4">
+                                    <h5 class="col-md-4">Customer Category</h5>
+                                    <div class="justify-content-center align-items-center row col-md">
+                                        <span class="update_fields_CustomerCategory update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields add_fields_CustomerCategory col-md row p-0 p-md-3 justify-content-start align-items-center">
+                                            <select type="text" dataKey="CustomerTypeID" class="postData form-select col-sm"
                                                 name="" id="" placeholder="Customer Type">
                                                 <option value="">Select Type</option>
                                             </select>
                                             <input type="text" dataKey="CustomerCategoryTitle"
-                                                class="postData form-control" name="" id=""
+                                                class="postData form-control col-sm" name="" id=""
                                                 placeholder="Customer Category Title" />
                                             <button postAPI="CustomerCategory"
-                                                class="addData btn btn-primary ms-2">ADD</button>
+                                                class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
                                         <button value="CustomerCategory"
-                                            class="new_data_fields btn btn-secondary ms-2">Clear</button>
+                                            class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
                                     </div>
                                 </div>
                                 <table id="CustomerCategoryTable" class="table table-striped" data-toggle="data-table">
