--- a/masters_document.html
+++ b/masters_document.html
@@ -341,18 +341,18 @@
                         </div>
                         <div class="card-body">
                             <div class="datatable table-responsive">
-                                <div class="entry_fields d-flex justify-content-between align-items-center m-4">
-                                    <h5 class="col-md-3">Document Languages</h5>
-                                    <div class="d-flex justify-content-end col-md-9">
-                                        <span class="update_fields_DocumentLanguage update_fields d-none"></span>
-                                        <span class="add_fields add_fields_DocumentLanguage d-flex">
+                                <div class="entry_fields row justify-content-between align-items-center m-4">
+                                    <h5 class="col-md-4">Document Languages</h5>
+                                    <div class="justify-content-center align-items-center row col-md">
+                                        <span class="update_fields_DocumentLanguage update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields add_fields_DocumentLanguage col-md row p-0 p-md-3 justify-content-start align-items-center">
                                             <input type="text" dataKey="DocumentLanguageTitle"
-                                                class="postData form-control" name="" id=""
+                                                class="postData form-control col-sm" name="" id=""
                                                 placeholder="Document Language" />
                                             <button postAPI="DocumentLanguage"
-                                                class="addData btn btn-primary ms-2">ADD</button>
+                                                class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
-                                        <button value="DocumentLanguage" class="new_data_fields btn btn-secondary ms-2">Clear</button>
+                                        <button value="DocumentLanguage" class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
                                     </div>
                                 </div>
                                 <table id="DocumentLanguagesTable" class="table table-striped" data-toggle="data-table">
@@ -375,16 +375,16 @@
                                 </table>
                             </div>
                             <div class="datatable d-none table-responsive">
-                                <div class="entry_fields d-flex justify-content-between align-items-center m-4">
-                                    <h5 class="col-md-3">Document Types</h5>
-                                    <div class="d-flex justify-content-end col-md-9">
-                                        <span class="update_fields_DocumentType update_fields d-none"></span>
-                                        <span class="add_fields add_fields_DocumentType d-flex">
-                                            <input type="text" dataKey="DocumentTypeTitle" class="postData form-control"
+                                <div class="entry_fields row justify-content-between align-items-center m-4">
+                                    <h5 class="col-md-4">Document Types</h5>
+                                    <div class="justify-content-center align-items-center row col-md">
+                                        <span class="update_fields_DocumentType update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields add_fields_DocumentType col-md row p-0 p-md-3 justify-content-start align-items-center">
+                                            <input type="text" dataKey="DocumentTypeTitle" class="postData form-control col-sm"
                                                 name="" id="" placeholder="Document Type" />
-                                            <button postAPI="DocumentType" class="addData btn btn-primary ms-2">ADD</button>
+                                            <button postAPI="DocumentType" class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
-                                        <button value="DocumentType" class="new_data_fields btn btn-secondary ms-2">Clear</button>
+                                        <button value="DocumentType" class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
                                     </div>
                                 </div>
                                 <table id="DocumentTypesTable" class="table table-striped" data-toggle="data-table">
@@ -407,16 +407,16 @@
                                 </table>
                             </div>
                             <div class="datatable d-none table-responsive">
-                                <div class="entry_fields d-flex justify-content-between align-items-center m-4">
-                                    <h5 class="col-md-3">Property Types</h5>
-                                    <div class="d-flex justify-content-end col-md-9">
-                                        <span class="update_fields_PropertyType update_fields d-none"></span>
-                                        <span class="add_fields add_fields_PropertyType d-flex">
-                                            <input type="text" dataKey="PropertyTypeTitle" class="postData form-control"
+                                <div class="entry_fields row justify-content-between align-items-center m-4">
+                                    <h5 class="col-md-4">Property Types</h5>
+                                    <div class="justify-content-center align-items-center row col-md">
+                                        <span class="update_fields_PropertyType update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields add_fields_PropertyType col-md row p-0 p-md-3 justify-content-start align-items-center">
+                                            <input type="text" dataKey="PropertyTypeTitle" class="postData form-control col-sm"
                                                 name="" id="" placeholder="Property Type" />
-                                            <button postAPI="PropertyType" class="addData btn btn-primary ms-2">ADD</button>
+                                            <button postAPI="PropertyType" class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
-                                        <button value="PropertyTypes" class="new_data_fields btn btn-secondary ms-2">Clear</button>
+                                        <button value="PropertyTypes" class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
                                     </div>
                                 </div>
                                 <table id="PropertyTypesTable" class="table table-striped" data-toggle="data-table">
