download docs and pdf proper allignment

--- a/document.html
+++ b/document.html
@@ -418,7 +418,7 @@
                             <img class="img-fluid rounded" src="./assets/svg/graphic-stamp-paper.svg" alt="">
                         </div>
                         <div class="googoose-wrapper card-body p-2 overflow-auto h-75"
-                            style="text-align: justify;text-justify: inter-word;" id="deed_body_view"></div>
+                            style="text-align: justify;text-justify: inter-word;line-height: 32px;font-family:'Times New Roman', Times, serif;font-size: medium;" id="deed_body_view"></div>
                     </div>
                 </div>
             </div>
