create document overflow hidden gendor

--- a/document.html
+++ b/document.html
@@ -336,9 +336,9 @@
             </div>
             <div id="new_document_entry" class="row d-none">
                 <div class="row">
-                    <div class="col-sm-12 col-lg-6">
-                        <div class="card row">
-                            <div class="card-header col-sm-12 row justify-content-between">
+                    <div class="col-sm-12 col-lg-7">
+                        <div class="card row overflow-hidden">
+                            <div style="left:10px" class="card-header col-sm-12 row justify-content-between">
                                 <div class="header-title col">
                                     <h4 class="card-title">Create Document</h4>
                                 </div>
@@ -1273,7 +1273,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-lg-6">
+                    <div class="col-sm-12 col-lg-5">
                         <div class="card max-height-vh-70">
                             <div class="card-header pb-0 px-3 d-flex align-items-center justify-content-center">
                                 <h3>DEED</h3>
