smaller button and use of local storage

--- a/masters_document.html
+++ b/masters_document.html
@@ -262,15 +262,15 @@
                                 <div class="entry_fields row justify-content-between align-items-center m-4">
                                     <h5 class="col-md-4">Document Languages</h5>
                                     <div class="justify-content-center align-items-center row col-md">
-                                        <span class="update_fields_DocumentLanguage update_fields d-none col-md row p-0 p-md-3"></span>
-                                        <span class="add_fields add_fields_DocumentLanguage col-md row p-0 p-md-3 justify-content-start align-items-center">
+                                        <span class="update_fields_DocumentLanguage justify-content-center update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields justify-content-center add_fields_DocumentLanguage col-md row p-0 p-md-3 justify-content-start align-items-center">
                                             <input type="text" dataKey="DocumentLanguageTitle"
                                                 class="postData form-control col-sm" name="" id=""
                                                 placeholder="Document Language" />
-                                            <button postAPI="DocumentLanguage"
+                                            <button postAPI="DocumentLanguage" style="width: 85px;"
                                                 class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
-                                        <button value="DocumentLanguage" class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
+                                        <button value="DocumentLanguage" style="width: 91px;" class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
                                     </div>
                                 </div>
                                 <table id="DocumentLanguagesTable" class="table table-striped" data-toggle="data-table">
@@ -296,13 +296,13 @@
                                 <div class="entry_fields row justify-content-between align-items-center m-4">
                                     <h5 class="col-md-4">Document Types</h5>
                                     <div class="justify-content-center align-items-center row col-md">
-                                        <span class="update_fields_DocumentType update_fields d-none col-md row p-0 p-md-3"></span>
-                                        <span class="add_fields add_fields_DocumentType col-md row p-0 p-md-3 justify-content-start align-items-center">
+                                        <span class="update_fields_DocumentType justify-content-center update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields justify-content-center add_fields_DocumentType col-md row p-0 p-md-3 justify-content-start align-items-center">
                                             <input type="text" dataKey="DocumentTypeTitle" class="postData form-control col-sm"
                                                 name="" id="" placeholder="Document Type" />
-                                            <button postAPI="DocumentType" class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
+                                            <button postAPI="DocumentType" style="width: 85px;" class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
-                                        <button value="DocumentType" class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
+                                        <button value="DocumentType" style="width: 91px;" class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
                                     </div>
                                 </div>
                                 <table id="DocumentTypesTable" class="table table-striped" data-toggle="data-table">
@@ -328,13 +328,13 @@
                                 <div class="entry_fields row justify-content-between align-items-center m-4">
                                     <h5 class="col-md-4">Property Types</h5>
                                     <div class="justify-content-center align-items-center row col-md">
-                                        <span class="update_fields_PropertyType update_fields d-none col-md row p-0 p-md-3"></span>
-                                        <span class="add_fields add_fields_PropertyType col-md row p-0 p-md-3 justify-content-start align-items-center">
+                                        <span class="update_fields_PropertyType justify-content-center update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields justify-content-center add_fields_PropertyType col-md row p-0 p-md-3 justify-content-start align-items-center">
                                             <input type="text" dataKey="PropertyTypeTitle" class="postData form-control col-sm"
                                                 name="" id="" placeholder="Property Type" />
-                                            <button postAPI="PropertyType" class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
+                                            <button postAPI="PropertyType" style="width: 85px;" class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
-                                        <button value="PropertyTypes" class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
+                                        <button value="PropertyTypes" style="width: 91px;" class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
                                     </div>
                                 </div>
                                 <table id="PropertyTypesTable" class="table table-striped" data-toggle="data-table">
