--- a/masters_customer.html
+++ b/masters_customer.html
@@ -266,19 +266,19 @@
                                 <div class="entry_fields row align-items-center m-4">
                                     <h5 class="col-md-4">Customer Genders</h5>
                                     <div class="justify-content-center align-items-center row col-md">
-                                        <span class="update_fields_CustomerGenders update_fields d-none col-md row p-0 p-md-3"></span>
-                                        <span class="add_fields add_fields_CustomerGenders col-md row p-0 p-md-3 justify-content-start align-items-center">
+                                        <span class="update_fields_CustomerGenders justify-content-center update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields justify-content-center add_fields_CustomerGenders col-md row p-0 p-md-3 justify-content-start align-items-center">
                                                 <input type="text" dataKey="CustomerGenderValue"
                                                     class="postData form-control col-sm" name="" id=""
                                                     placeholder="Gender Value" />
                                                 <input dataKey="CustomerGenderTitle" type="text"
                                                     class="postData form-control col-sm"  name="" id=""
                                                     placeholder="Gender Title" />
-                                            <button postAPI="CustomerGenders"
+                                            <button postAPI="CustomerGenders" style="width: 85px;"
                                                 class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
-                                        <button value="CustomerGenders"
-                                            class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
+                                        <button value="CustomerGenders" style="width: 91px;"
+                                            class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-2">Clear</button>
                                     </div>
                                 </div>
                                 <table id="CustomerGenderTable" class="table table-striped" data-toggle="data-table">
@@ -306,18 +306,18 @@
                                 <div class="entry_fields row justify-content-between align-items-center m-4">
                                     <h5 class="col-md-4">Customer Relations</h5>
                                     <div class="justify-content-center align-items-center row col-md">
-                                        <span class="update_fields_CustomerRelationships update_fields d-none col-md row p-0 p-md-3"></span>
-                                        <span class="add_fields add_fields_CustomerRelationships col-md row p-0 p-md-3 justify-content-start align-items-center">
+                                        <span class="update_fields_CustomerRelationships justify-content-center update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields justify-content-center add_fields_CustomerRelationships col-md row p-0 p-md-3 justify-content-start align-items-center">
                                             <input type="text" dataKey="CustomerRelationshipTitle"
                                                 class="postData form-control col-sm" name="" id=""
                                                 placeholder="Relationship Title" />
                                             <input dataKey="CustomerRelationshipValue" type="text"
                                                 class="postData form-control col-sm" name="" id=""
                                                 placeholder="Relationship Value" />
-                                            <button postAPI="CustomerRelationships"
+                                            <button postAPI="CustomerRelationships" style="width: 85px;"
                                                 class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
-                                        <button value="CustomerRelationships"
+                                        <button value="CustomerRelationships" style="width: 91px;"
                                             class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
                                     </div>
                                 </div>
@@ -347,14 +347,14 @@
                                 <div class="entry_fields row justify-content-between align-items-center m-4">
                                     <h5 class="col-md-4">Customer Type</h5>
                                     <div class="justify-content-center align-items-center row col-md">
-                                        <span class="update_fields_CustomerType update_fields d-none col-md row p-0 p-md-3"></span>
-                                        <span class="add_fields add_fields_CustomerTypes col-md row p-0 p-md-3 justify-content-start align-items-center">
+                                        <span class="update_fields_CustomerType justify-content-center update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields justify-content-center add_fields_CustomerTypes col-md row p-0 p-md-3 justify-content-start align-items-center">
                                             <input type="text" dataKey="CustomerTypeTitle" class="postData form-control col-sm"
                                                 name="" id="" placeholder="Customer Type Title" />
-                                            <button postAPI="CustomerTypes"
+                                            <button postAPI="CustomerTypes" style="width: 85px;"
                                                 class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
-                                        <button value="CustomerType"
+                                        <button value="CustomerType" style="width: 91px;"
                                             class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
                                     </div>
                                 </div>
@@ -381,8 +381,8 @@
                                 <div class="entry_fields row justify-content-between align-items-center m-4">
                                     <h5 class="col-md-4">Customer Category</h5>
                                     <div class="justify-content-center align-items-center row col-md">
-                                        <span class="update_fields_CustomerCategory update_fields d-none col-md row p-0 p-md-3"></span>
-                                        <span class="add_fields add_fields_CustomerCategory col-md row p-0 p-md-3 justify-content-start align-items-center">
+                                        <span class="update_fields_CustomerCategory justify-content-center update_fields d-none col-md row p-0 p-md-3"></span>
+                                        <span class="add_fields justify-content-center add_fields_CustomerCategory col-md row p-0 p-md-3 justify-content-start align-items-center">
                                             <select type="text" dataKey="CustomerTypeID" class="postData form-select col-sm"
                                                 name="" id="" placeholder="Customer Type">
                                                 <option value="">Select Type</option>
@@ -390,10 +390,10 @@
                                             <input type="text" dataKey="CustomerCategoryTitle"
                                                 class="postData form-control col-sm" name="" id=""
                                                 placeholder="Customer Category Title" />
-                                            <button postAPI="CustomerCategory"
+                                            <button postAPI="CustomerCategory" style="width: 85px;"
                                                 class="addData btn btn-primary mt-2 mt-sm-0 ms-0 ms-sm-2 col-md-4 col-sm-3">ADD</button>
                                         </span>
-                                        <button value="CustomerCategory"
+                                        <button value="CustomerCategory" style="width: 91px;"
                                             class="new_data_fields btn btn-secondary mt-2 mt-md-0 ms-0 ms-sm-2 col-md-4">Clear</button>
                                     </div>
                                 </div>
