payment number input

--- a/document.html
+++ b/document.html
@@ -1009,6 +1009,12 @@
                                                         <label for="inputPropertyType">Property</label>
                                                     </div>
                                                 </div>
+                                                <div class="col-md-12 mb-3">
+                                                    <div class="form-floating" id="inputPropertyTypeDiv">
+                                                        <input class="form-control" name="" id="inputPropertyType" type="number" placeholder="Payment" />
+                                                        <label for="inputPropertyType">Payment</label>
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="row">
                                                 <div class="col-md-12 mb-3">
