add another is pending

--- a/document.html
+++ b/document.html
@@ -514,7 +514,7 @@
                                                                     No</label>
                                                             </div>
                                                         </div>
-                                                        <div class="col-md-3 mb-3">
+                                                        <div class="col-md mb-3">
                                                             <div class="form-floating"
                                                                 id="inputVendorCompanyAddressDiv">
                                                                 <input  type="text"
@@ -645,21 +645,11 @@
                                                         <div class="col-md-4 mb-3">
                                                             <div class="form-floating">
                                                                 <input type="text" class="form-control" name=""
-                                                                    save_id="DocumentVendorDoorNo"
+                                                                    save_id="DocumentVendorAddress"
                                                                     id="inputVendorDoorNo"
-                                                                    deed_id="documentFirstPersonDoorNo"
-                                                                    placeholder="Door No" />
-                                                                <label for="inputVendorDoorNo">Door No</label>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-md-4 mb-3">
-                                                            <div class="form-floating">
-                                                                <input type="text" class="form-control" name=""
-                                                                    save_id="DocumentVendorStreet"
-                                                                    id="inputVendorStreet"
-                                                                    deed_id="documentFirstPersonStreet"
-                                                                    placeholder="Street" />
-                                                                <label for="inputVendorStreet">Street</label>
+                                                                    deed_id="documentFirstPersonAddress"
+                                                                    placeholder="Address" />
+                                                                <label for="inputVendorAddress">Address</label>
                                                             </div>
                                                         </div>
                                                         <div class="col-md-4 mb-3">
@@ -782,7 +772,7 @@
                                                                     No</label>
                                                             </div>
                                                         </div>
-                                                        <div class="col-md-3 mb-3">
+                                                        <div class="col-md mb-3">
                                                             <div class="form-floating"
                                                                 id="inputPurchaserCompanyAddressDiv">
                                                                 <input  type="text"
@@ -907,20 +897,11 @@
                                                         </div>
                                                         <div class="col-md-4 mb-3">
                                                             <div class="form-floating">
-                                                                <input type="text" class="form-control" name="" save_id="DocumentPurchaserDoorNo"
-                                                                    id="inputPurchaserDoorNo"
-                                                                    deed_id="documentSecondPersonDoorNo"
-                                                                    placeholder="Door No" />
-                                                                <label for="inputPurchaserDoorNo">Door No</label>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-md-4 mb-3">
-                                                            <div class="form-floating">
-                                                                <input type="text" class="form-control" name="" save_id="DocumentPurchaserStreet"
-                                                                    id="inputPurchaserStreet"
-                                                                    deed_id="documentSecondPersonStreet"
-                                                                    placeholder="Street" />
-                                                                <label for="inputPurchaserStreet">Street</label>
+                                                                <input type="text" class="form-control" name="" save_id="DocumentPurchaserAddress"
+                                                                    id="inputPurchaserAddress"
+                                                                    deed_id="documentSecondPersonAddress"
+                                                                    placeholder="Address" />
+                                                                <label for="inputPurchaserDoorNo">Address</label>
                                                             </div>
                                                         </div>
                                                         <div class="col-md-4 mb-3">
@@ -1208,18 +1189,9 @@
                                                     <div class="form-floating">
                                                         <input type="text" class="form-control" name=""
                                                             id="inputWitnessDoorNo"
-                                                            deed_id="documentWitnessPersonDoorNo" save_id="DocumentWitnessDoorNo"
-                                                            placeholder="Door No" />
-                                                        <label for="inputWitnessDoorNo">Door No</label>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-4 mb-3">
-                                                    <div class="form-floating">
-                                                        <input type="text" class="form-control" name=""
-                                                            id="inputWitnessStreet"
-                                                            deed_id="documentWitnessPersonStreet" save_id="DocumentWitnessStreet"
-                                                            placeholder="Street" />
-                                                        <label for="inputWitnessStreet">Street</label>
+                                                            deed_id="documentWitnessPersonAddress" save_id="DocumentWitnessAddress"
+                                                            placeholder="Address" />
+                                                        <label for="inputWitnessAddress">Address</label>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-4 mb-3">
