edit delete start

--- a/document.html
+++ b/document.html
@@ -991,9 +991,9 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-md-12 mb-3">
-                                                    <div class="form-floating" id="inputPropertyTypeDiv">
-                                                        <input class="form-control" name="" id="inputPropertyType" type="number" placeholder="Payment" />
-                                                        <label for="inputPropertyType">Payment</label>
+                                                    <div class="form-floating" id="inputPropertyPriceDiv">
+                                                        <input class="form-control" name="" id="inputPropertyPrice" type="number" placeholder="Price" />
+                                                        <label for="inputPropertyPrice">Price</label>
                                                     </div>
                                                 </div>
                                             </div>
